use cdn to load katex

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -7,8 +7,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js"></script>
 
 {{ if not .IsHome }}
-<script type="text/javascript" src="{{ relURL "js/katex.js" }}"></script>
-<script type="text/javascript" src="{{ relURL "js/auto-render.js" }}"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
+    integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
+    onload="renderMathInElement(document.body);"></script>
 <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function () {
         renderMathInElement(
