--- a/layouts/notes/single.html
+++ b/layouts/notes/single.html
@@ -30,6 +30,9 @@
 								<span>
 									<i class="fad fa-copyright mr-2"></i>
 									{{ .Site.Copyright }}
+									<a class="float-right" href="#" onclick="window.print()">
+											打印本页
+									</a>
 								</span>
 							</footer>
 						</div>
