--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <main id="main" class="my-3">
     <section class="section-half-rounded">
         <div class="jumbotron section-inner left-0 rounded-right bg-gradient-blue overflow-hidden col-lg-9">
-            <img src="/images/boat.jpg" alt="Image" class="img-as-bg blend-mode--multiply">
+            <img src="{{ .Site.Params.links.homeImage }}" alt="Image" class="img-as-bg blend-mode--multiply">
         </div>
         <div class="container text-center text-lg-left py-5">
             <div class="row">
@@ -14,7 +14,7 @@
                                 <canvas id="welcome-canvas" class="welcome-canvas"></canvas>
                             </h2>
                             <p class="lead lh-180">
-                                欢迎访问{{.Site.Author.name}}的博客
+                                欢迎访问{{ .Site.Author.name }}的博客
                             </p>
                             <div class="mt-3">
                                 <a href="/blog/" class="btn btn-success btn-icon shadow-sm hover-translate-y-n3 mt-3">
