--- a/assets/sass/themes/_color.scss
+++ b/assets/sass/themes/_color.scss
@@ -1,3 +1,13 @@
+// Colors
+$theme: #018574;
+$text: #c6cddb;
+$light-grey: #494f5c;
+$dark-grey: #3B3E48;
+$highlight-grey: #7d828a;
+$midnightblue: rgba(44, 62, 80, 0.85);
+$teal: rgba(0, 134, 123, 0.85);
+$white: rgba(255, 255, 255, 0.85);
+
 .bg-gradient-success {
     background: linear-gradient(50deg, #2dca8c 0, #2dcabb 100%) !important;
 }
@@ -84,3 +94,21 @@
 .bg-light {
     background-color: #eff2f7 !important;
 }
+
+@mixin dimmed {
+    opacity: .6;
+}
+
+@mixin dark-overlay {
+    &:after {
+      content: "";
+      width: 100%;
+      height: auto;
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+    }
+  }
