Add custom style on homepage; fix #9; fix #2

--- a/assets/sass/themes/_color.scss
+++ b/assets/sass/themes/_color.scss
@@ -8,7 +8,7 @@ $midnightblue: rgba(44, 62, 80, 0.85);
 $teal: rgba(0, 134, 123, 0.85);
 $white: rgba(255, 255, 255, 0.85);
 
-.bg-gradient-success {
+.bg-gradient-green {
     background: linear-gradient(50deg, #2dca8c 0, #2dcabb 100%) !important;
 }
 
@@ -20,7 +20,7 @@ $white: rgba(255, 255, 255, 0.85);
     background: linear-gradient(50deg, #ff5c75 0, #ff745c 100%) !important;
 }
 
-.bg-gradient-secondary {
+.bg-gradient-white {
     background: linear-gradient(50deg, #eff2f7 0, #eff0f7 100%) !important;
 }
 
