--- a/assets/sass/themes/_font.scss
+++ b/assets/sass/themes/_font.scss
@@ -37,3 +37,9 @@ body {
     }
   }
 
+
+.text-highlight-primary {
+  background-image: linear-gradient(transparent 66%,rgba(12,102,255,.15) 34%);
+  background-repeat: repeat-x;
+  font-size: 3rem;
+}
