--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,18 @@
 {{ define "main" }}
 <main id="main" class="my-3">
     <section class="section-half-rounded">
-        <div class="jumbotron section-inner left-0 rounded-right bg-gradient-blue overflow-hidden col-lg-9">
-            <img src="/images/boat.jpg" alt="Image" class="img-as-bg blend-mode--multiply">
+        <div class="jumbotron section-inner left-0 rounded-right {{ with $.Site.Params.options.homeblend -}} 
+        {{- if eq $.Site.Params.options.homeblend "green" -}} 
+            bg-gradient-green   
+        {{- else if eq $.Site.Params.options.homeblend "blue" -}} 
+            bg-gradient-blue    
+        {{- else if eq $.Site.Params.options.homeblend "red" -}} 
+            bg-gradient-red
+        {{- else if eq $.Site.Params.options.homeblend "white" -}} 
+            bg-gradient-white
+        {{- end -}} 
+        {{- end }} overflow-hidden col-lg-9">
+            <img src="{{ .Site.Params.options.homeimage }}" alt="Image" class="img-as-bg blend-mode--multiply">
         </div>
         <div class="container text-center text-lg-left py-5">
             <div class="row">
@@ -10,8 +20,11 @@
                     <div class="card shadow-lg rounded-lg mb-0">
                         <div class="card-body px-5 py-6">
                             <h2 class="h1 font-weight-bold mb-3">
-                                <!--<span class="text-highlight-primary">Welcome</span>-->
+                                {{ if not .Site.Params.options.leonsans }}
+                                <span class="text-highlight-primary">Welcome</span>
+                                {{ else }}
                                 <canvas id="welcome-canvas" class="welcome-canvas"></canvas>
+                                {{ end }}
                             </h2>
                             <p class="lead lh-180">
                                 欢迎访问{{.Site.Author.name}}的博客
