--- a/layouts/notes/single.html
+++ b/layouts/notes/single.html
@@ -38,15 +38,15 @@
 						</div>
 						<div id="content" class="hl-h2">
 							{{ $content := "" }}
-							{{ if .Site.Params.options.mathmode }}
+							{{ if .Site.Params.mathmode }}
 							  {{ $content = .RawContent | replaceRE "_" "\\_" | markdownify }}
 							{{ else }}
 							  {{ $content = .Content }}
 							{{ end }}
-							{{ if .Site.Params.options.linkicon }}
+							{{ if .Site.Params.linkicon }}
 							  {{ $content = replaceRE "(<h[1-6] id=\"([^\"]+)\".+)(</h[1-6]+>)" `${1}<a href="#${2}" class="anchor" aria-hidden="true"><i class="iconfont icon-link"></i></a>${3}` $content  }}
 							{{ end }}
-							{{ if .Site.Params.options.tablecenter }}
+							{{ if .Site.Params.tablecenter }}
 							  {{ $content = replaceRE "align=\"center\"" "class=\"text-center\"" $content }}
 							{{ end }}
 							{{ safeHTML $content }}
