--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -17,15 +17,15 @@
         <div class="card border-0 shadow-none">
           <div class="card-body">
             {{ $content := "" }}
-            {{ if .Site.Params.options.mathmode }}
+            {{ if .Site.Params.mathmode }}
               {{ $content = .RawContent | replaceRE "_" "\\_" | markdownify }}
             {{ else }}
               {{ $content = .Content }}
             {{ end }}
-            {{ if .Site.Params.options.linkicon }}
+            {{ if .Site.Params.linkicon }}
               {{ $content = replaceRE "(<h[1-6] id=\"([^\"]+)\".+)(</h[1-6]+>)" `${1}<a href="#${2}" class="anchor" aria-hidden="true"><i class="iconfont icon-link"></i></a>${3}` $content  }}
             {{ end }}
-            {{ if .Site.Params.options.tablecenter }}
+            {{ if .Site.Params.tablecenter }}
               {{ $content = replaceRE "align=\"center\"" "class=\"text-center\"" $content }}
             {{ end }}
             {{ safeHTML $content }}
