--- a/layouts/partials/stylesheets.html
+++ b/layouts/partials/stylesheets.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ .Site.Params.IconfontURL }}">
+<link rel="stylesheet" href="//at.alicdn.com/t/font_1559566_q4af2vtq4qr.css">
 <link rel="stylesheet" href="/katex.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq">
 {{ $style:= resources.Get "sass/main.scss" | toCSS | minify | fingerprint | resources.ToCSS | minify | fingerprint }}
 <link rel="stylesheet" href="{{ relURL $style.Permalink }}" integity="{{$style.Data.Integrity}}">
