--- a/layouts/partials/stylesheets.html
+++ b/layouts/partials/stylesheets.html
@@ -1,4 +1,23 @@
+{{/* Iconfont */}}
 <link rel="stylesheet" href="//at.alicdn.com/t/font_1559566_q4af2vtq4qr.css">
-<link rel="stylesheet" href="/katex.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq">
-{{ $style:= resources.Get "sass/main.scss" | toCSS | minify | fingerprint | resources.ToCSS | minify | fingerprint }}
-<link rel="stylesheet" href="{{ relURL $style.Permalink }}" integity="{{$style.Data.Integrity}}">
+{{/* KaTeX */}}
+{{ if .Site.Params.useCDN }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+{{ else }}
+    <link rel="stylesheet" href="/katex.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq">
+{{ end }}
+
+{{ if .Site.Params.useCDN }}
+    {{/* Normalize */}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    {{/* Animate */}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" integrity="sha256-a2tobsqlbgLsWs7ZVUGgP5IvWZsx8bTNQpzsqCSm5mk=" crossorigin="anonymous" />
+    {{/* Bootswatch */}}
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/materia/bootstrap.min.css" rel="stylesheet" integrity="sha384-1tymk6x9Y5K+OF0tlmG2fDRcn67QGzBkiM3IgtJ3VrtGrIi5ryhHjKjeeS60f1FA" crossorigin="anonymous">
+    {{/* Custom */}}
+    {{ $style:= resources.Get "sass/main_cdn.scss" | toCSS | minify | fingerprint | resources.ToCSS | minify | fingerprint }}
+    <link rel="stylesheet" href="{{ relURL $style.Permalink }}" integity="{{$style.Data.Integrity}}">
+{{ else }}
+    {{ $style:= resources.Get "sass/main.scss" | toCSS | minify | fingerprint | resources.ToCSS | minify | fingerprint }}
+    <link rel="stylesheet" href="{{ relURL $style.Permalink }}" integity="{{$style.Data.Integrity}}">
+{{ end }}
