--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -7,7 +7,7 @@
 }
 
 .btn:hover {
-    color: #8492a6;
+    color: $highlight-grey;
 }
 
 .btn-outline-secondary {
@@ -198,4 +198,9 @@
 .btn-dark:not(:disabled):not(.disabled):active:focus,
 .show>.btn-dark.dropdown-toggle:focus {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 0 0 rgba(39, 52, 68, .35)
+}
+
+.btn-info:hover, .btn-info:active:hover {
+    color: #fff;
+    background-color: #862197;
 }
