--- a/assets/sass/themes/_font.scss
+++ b/assets/sass/themes/_font.scss
@@ -3,6 +3,12 @@ $code-fonts: Consolas, "Andale Mono WT", "Andale Mono", Menlo, Monaco, "Lucida C
 
 @import url(https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700);
 
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  color: $highlight-grey;
+}
+
+
 .hl-h2 {
     & > h2 {
       background-image: linear-gradient(transparent 66%,rgba(0, 134, 123, .05) 34%);
