--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{ partial "list-header.html" . }}
-<main class="container">
+<main class="container bg-list">
     <div class="row row-grid justify-content-center">
         <div class="col col-12">
             {{ range .Pages.GroupByDate "2006-01"}}
